<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Data -->
    <string name="dummy_string">A Dummy Text</string>
    <string name="logo_desc">A Dummy Image</string>
    <string name="change_btn">Change</string>
    <string name="save_btn">Save</string>
    <string name="update_btn">Update</string>
    <string name="connect_btn">Connect</string>
    <string name="cancel_btn">Cancel</string>
    <string name="extras_btn">Calico Corner</string>
    <string name="music_player_btn">Calico Music Player</string>
    <string name="timer_btn">Calico Timer</string>
    <string name="no_connection">Please connect to internet to get the best from Calico on your phone</string>
    <string name="form_max_length_error">Text is too long</string>
    <string name="form_min_length_error">Text is too short</string>
    <string name="service_active">Calico service is activated!</string>

    <!-- Notification -->
    <string name="reminder_notification_title">New Day, New Inspiration</string>
    <string name="reminder_notification_content">Calico can give you new cooking inspirations</string>
    <string name="welcome_notification_title">Welcome to Calico</string>
    <string name="welcome_notification_content">Enjoy your new cooking experiences</string>

    <!-- Permission -->
    <string name="permission_granted">Thank you for granting Calico permission</string>
    <string name="permission_denied">Please grant all permissions to continue</string>

    <!-- Authentication Form -->
    <string name="auth_success">Success! Welcome to Calico</string>
    <string name="form_empty_error">Field cannot be empty</string>
    <string name="wrong_credentials_error">Wrong Credentials or Account Does Not Exists</string>
    <string name="email_format_error">Invalid e-mail address format</string>

    <!-- Sign In Screen Information -->
    <string name="signin_title">Welcome Back</string>
    <string name="signin_subtitle">Please Sign In to Continue</string>
    <string name="form_username">Usermame</string>
    <string name="form_password">Password</string>
    <string name="signin_button">Sign In</string>
    <string name="signup_button_onsignin">Sign Up for Free Account</string>

    <!-- Register Screen Information -->
    <string name="signup_title">Welcome to Calico</string>
    <string name="signup_subtitle">Please Register to Continue</string>
    <string name="form_fullname">Full Name</string>
    <string name="form_email">E-mail Address</string>
    <string name="form_phone">Phone Number</string>
    <string name="signup_button">Sign Up</string>
    <string name="signin_button_onsignup">Sign In With Calico Account</string>

    <!-- Splash Screen Information -->
    <string name="app_name">Calico</string>
    <string name="logo_name">Calico</string>
    <string name="app_slogan">Cooking Journal on Your Hand</string>
    <string name="created_by">Pradipta Gitaya - 2020</string>

    <!-- Onboarding Screen Information -->

    <!--Titles-->
    <string name="first_slide_title">Welcome</string>
    <string name="second_slide_title">Daily Cooking Journal</string>
    <string name="third_slide_title">Current Tech Stacks</string>
    <string name="fourth_slide_title">Try Calico Now</string>

    <!--Descriptions-->
    <string name="image_desc">Placeholder Onboarding</string>
    <string name="first_slide_desc">Calico is a simple application that helps you documenting your cooking hobby in as a cooking journal easier than you think</string>
    <string name="second_slide_desc">With Calico, you can store all of your cooking activities whenever and wherever you are. All you can get in your hand</string>
    <string name="third_slide_desc">Calico comes with current technology stacks that enhances your experiences and makes your life and hobby easier</string>
    <string name="fourth_slide_desc">Try Calico now and get the new experiences that you never get before anywhere. Click start now to get started</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="prev_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="get_started_btn">Start</string>

    <!-- Home Screen Information -->
    <string name="intro">Start your cooking journey today</string>
    <string name="dish_btn">Inspirations</string>
    <string name="journal_btn">Your Journals</string>
    <string name="profile_btn">Profile</string>
    <string name="quote_title">Quote of the day:</string>
    <string name="quote_1">Everybody have their own struggles</string>
    <string name="quote_2">Life is never flat</string>
    <string name="quote_3">You do not need to afraid become generalist</string>
    <string name="quote_4">Learn as if you were to live forever</string>
    <string name="quote_5">Do what you can, with what you have, where you are</string>
    <string name="quote_6">Be yourself. everyone else is already taken</string>
    <string name="quote_7">Everybody is smart</string>
    <string name="quote_8">Real life is a best teacher</string>
    <string name="quote_9">Sometimes it is okay to be not okay</string>
    <string name="quote_10">You can do better if you calm</string>

    <!-- Journal Screen Information -->
    <string name="journal_button_add">New Journal</string>
    <string name="journal_list_title">Your Journals</string>
    <string name="journal_list_intro">All of your journals will be shown here</string>
    <string name="journal_card_title_placeholder">Journal Title</string>
    <string name="journal_card_summary_placeholder">Journal short description</string>
    <string name="journal_empty">You can create your first cooking journal now</string>
    <string name="journal_create_title">Add Journal</string>
    <string name="journal_create_intro">You can add new cooking journal here</string>
    <string name="journal_form_placeholder">Write Here</string>
    <string name="journal_title_placeholder">Journal Title</string>
    <string name="journal_type_placeholder">Dish Type</string>
    <string name="journal_summary_placeholder">Small Notes</string>
    <string name="journal_description_placeholder">Journal Description</string>
    <string name="journal_create_success">Journal successfully created!</string>
    <string name="journal_food_radio_button_placeholder">Food or Snacks</string>
    <string name="journal_beverage_radio_button_placeholder">Drinks</string>
    <string name="journal_detail_placeholder">Journal Information</string>
    <string name="journal_info_intro">Here you see your cooking journal details</string>

    <!-- Profile Screen Information -->
    <string name="profile_edit_intro">Here you can change your profile information. Touch image above to change your profile picture</string>
    <string name="profile_info_intro">Here you see your profile information. You can change it wherever and whenever you want</string>
    <string name="profile_form_placeholder">Profile Information</string>
    <string name="profile_fullname_placeholder">Full Name</string>
    <string name="profile_username_placeholder">Username</string>
    <string name="profile_email_placeholder">E-mail Address</string>
    <string name="profile_phone_placeholder">Phone Number</string>
    <string name="profile_update_success">Profile updated successfully!</string>

    <!-- Extras Screen Information -->
    <string name="extras_list_title">Calico Extras</string>
    <string name="extras_list_intro">Try Calico additional features</string>
    <string name="extras_list_question_title">Special Random Question for You</string>
    <string name="extras_list_question_content">A Question</string>

    <string name="question_1">Have you ever wondered, why noodle is delicious ?</string>
    <string name="question_2">Are medium rare chickens good to eat ?</string>
    <string name="question_3">Have you ever cooked Steak ?</string>
    <string name="question_4">Do you love cookies ?</string>
    <string name="question_5">Have you ever tried sushi ? Try it and you will love it</string>
    <string name="question_6">Have you ever wondered why some cheese are smelly ?</string>
    <string name="question_7">Do you love pancakes ? There are sweet and savoury pancakes!</string>
    <string name="question_8">What do you think about savoury crepes ? Many people loves it!</string>
    <string name="question_9">Cheese! What kind of cheese you ever had tasted ?</string>
    <string name="question_10">Mango juice for holiday, what do you think ?</string>

    <!-- Calico Timer -->
    <string name="timer_title">Calico Journal Reminder Timer</string>
    <string name="timer_desc">Here you can set when Calico should remind you to write journal next time. You will get notification once time is up</string>
    <string name="timer_btn_1">30 minutes from now</string>
    <string name="timer_btn_2">1 hours from now</string>
    <string name="timer_btn_3">6 hours from now</string>
    <string name="timer_btn_4">12 hours from now</string>
    <string name="timer_success">Countdown successfully set! You will be notified later</string>
    <string name="timer_notification_title">Time to Write Journal!</string>
    <string name="timer_notification_desc">Calico will help you memorize your cooking journey</string>

    <!-- Calico Music Player -->
    <string name="music_title">Calico Music Player (Experimental)</string>
    <string name="music_desc">Here you can play your favorite music while writing journal. For now you can only listen to 1 music as this feature is currently experimental</string>
    <string name="music_btn_1">Pause</string>
    <string name="music_btn_2">Play</string>
    <string name="music_btn_3">Stop</string>
    <string name="music_stopped">Pressing back button will make music stops</string>
    <string name="music_notification_title">Music is Running!</string>
    <string name="music_notification_desc">Please open Calico to stop playback</string>

    <!-- Bottom Navigation Bar -->
    <string name="menu_offline_dish">Food + Drinks</string>
    <string name="menu_online_dish">More Dishes</string>

    <!-- Fragments -->
    <string name="fragment_offline_dish">Food Fragment</string>
    <string name="coming_soon">This Feature is Coming Soon!</string>

    <!-- Permission Denied Fragment -->
    <string name="permission_denied_title">Please Grant All Permissions</string>
    <string name="permission_denied_content">To give the best experience, some features in Calico need permissions to be able work perfectly</string>

</resources>
