<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBackground"
    android:orientation="vertical">

    <!-- Upper Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/card4"
        android:padding="20dp">

        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/balloon" />

        <TextView
            android:id="@+id/bannerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/bannerImage"
            android:fontFamily="@font/greycliff_bold"
            android:includeFontPadding="false"
            android:text="@string/extras_list_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bannerDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bannerTitle"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/bannerImage"
            android:fontFamily="@font/greycliff_demibold"
            android:includeFontPadding="false"
            android:text="@string/extras_list_intro"
            android:textSize="15sp" />
    </RelativeLayout>

    <!-- Down Section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Random Question Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/extras_list_question_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Question Message -->
            <TextView
                android:id="@+id/randomQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/extras_list_question_content"
                android:textSize="15sp" />

            <!-- Timer Button -->
            <Button
                android:id="@+id/timerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/timer_btn"
                android:textAllCaps="false" />

            <!-- Music Player Button -->
            <Button
                android:id="@+id/musicPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/music_player_btn"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
