<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Upper Section -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/card2"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/upload_dummy" />

        </RelativeLayout>

        <!-- Down Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Journal Page Introdution -->
            <TextView
                android:id="@+id/signin_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/journal_create_intro"
                android:textSize="15sp" />

            <!-- Journal Title -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/journalTitleForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/journal_title_placeholder"
                app:boxBackgroundColor="@color/homeBackground"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    app:endIconMode="clear_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Dish Type -->
            <RadioGroup
                android:id="@+id/journalDishForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/foodRadioButton">

                <RadioButton
                    android:id="@+id/foodRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/journal_food_radio_button_placeholder" />

                <RadioButton
                    android:id="@+id/beverageRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/journal_beverage_radio_button_placeholder" />

            </RadioGroup>

            <!-- Small Notes / Summary -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/journalSummaryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/journal_summary_placeholder"
                app:boxBackgroundColor="@color/homeBackground"
                app:counterEnabled="true"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    app:endIconMode="clear_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/journalDescriptionForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/journal_description_placeholder"
                app:boxBackgroundColor="@color/homeBackground"
                app:counterEnabled="true"
                app:counterMaxLength="300">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    app:endIconMode="clear_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Save Button -->
            <Button
                android:id="@+id/journalSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/save_btn" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
